# americas_capitals_game

./: Cargo.toml  README.md
src/: main.rs
